fixed horizontal scroll bug on safari

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,10 @@
 @import "./intro-loader-animation.css";
 @import "./hamburger-bar.css";
 
+html {
+  overflow-x: hidden;
+}
+
 @layer components {
   .page-gutter {
     @apply max-w-6xl mx-auto px-2 sm:px-6 lg:px-8;
